SUBDIRS = template

headerincludedir = $(includedir)/AFEPack

headerinclude_HEADERS = AMGSolver.h\
			BilinearOperator.h\
			BilinearOperator.templates.h\
			BinaryBuffer.h\
			BoundaryCondition.h\
			DBMesh.h\
			DGFEMSpace.h\
			DGFEMSpace.templates.h\
			DerefIterator.h\
			DenseMatrix.h\
			EasyMesh.h\
			EasyMesh.templates.h\
			FEMSpace.h\
			FEMSpace.templates.h\
			FEMSpace.vector_value.templates.h\
			Functional.h\
			Functional.templates.h\
			Geometry.h\
			Geometry.templates.h\
			GmshMesh.h\
			HGeometry.h\
			HGeometry.templates.h\
			HGeometry.templates.nd.h\
			HybridFEMSpace.h\
			LOBPCG.h\
			MemoryReclaimer.h\
			MemoryReclaimer.templates.h\
			Migration.details.h\
			Migration.h\
			Miscellaneous.h\
			MovingMesh.h\
			MovingMesh2D.h\
			MovingMesh3D.h\
			MovingMeshFB.h\
			MovingMeshFB3D.h\
			Operator.discretize.templates.h\
			Operator.h\
			Operator.interpolate.templates.h\
			Operator.project.templates.h\
			PropertyTable.h\
			Serialization.h\
			SimplestSimplexMesh.h\
			SparseMatrix.h\
			SparseMatrixTool.h\
			SparseMatrixTool.templates.h\
			SparsityPattern.h\
			TemplateElement.h\
			TemplateElement.templates.h\
			Thread.h\
			ThreadBase.h\
			Vecma.h\
			Vector.h\
			XObject.h


