SUBDIRS = template

if ENABLE_MPI
SUBDIRS += mpi
endif

DIST_SUBDIRS = template mpi

headerincludedir = $(includedir)/AFEPack

headerinclude_HEADERS = AMGSolver.h\
			BilinearOperator.h\
			BilinearOperator.templates.h\
			BinaryBuffer.h\
			BoundaryCondition.h\
			DBMesh.h\
			DGFEMSpace.h\
			DGFEMSpace.templates.h\
			DenseMatrix.h\
			DerefIterator.h\
			EasyMesh.h\
			EasyMesh.templates.h\
			FEMSpace.h\
			FEMSpace.templates.h\
			FEMSpace.vector_value.templates.h\
			Functional.h\
			Functional.templates.h\
			Geometry.h\
			Geometry.templates.h\
			GmshMesh.h\
			HGeometry.h\
			HGeometry.templates.h\
			HGeometry.templates.nd.h\
			HybridFEMSpace.h\
			MatrixBase.h\
			MemoryReclaimer.h\
			MemoryReclaimer.templates.h\
			Migration.details.h\
			Migration.h\
			Miscellaneous.h\
			MovingMesh2D.h\
			MovingMesh3D.h\
			MovingMeshFB.h\
			MovingMeshFB3D.h\
			Operator.discretize.templates.h\
			Operator.h\
			Operator.interpolate.templates.h\
			Operator.project.templates.h\
			PropertyTable.h\
			Serialization.h\
			SimplestSimplexMesh.h\
			Solvers.h\
			SparseMatrix.h\
			SparsityPattern.h\
			SparseMatrixTool.h\
			SparseMatrixTool.templates.h\
			TemplateElement.h\
			TemplateElement.templates.h\
			Thread.h\
			ThreadBase.h\
			Vector.h\
			XObject.h

