headerincludedir = $(includedir)/AFEPack/mpi
headerinclude_HEADERS = MPI.h\
		MPI_Controller.h\
		MPI_DOF.h\
		MPI_DOF.templates.h\
		MPI_FaceData.h\
		MPI_HGeometry.h\
		MPI_HGeometry.templates.h\
		MPI_HGeometry_archive.h\
		MPI_LoadBalance.h\
		MPI_MemoryReclaimer.h\
		MPI_Migration.h\
		MPI_PeriodHandler.h\
		MPI_SyncDOF.h\
		MPI_SyncProp.h\
		MPI_UGeometry_archive.h\
		MPI_ULoadBalance.h


# headerincludedir = $(includedir)/AFEPack/mpi

# headerinclude_HEADERS = MPI_Controller.h\
# 			MPI_DOF.h\
# 			MPI_DOF.template.h\
# 			MPI_FaceData.h\
# 			MPI.h\
# 			MPI_HGeometry_archive.h\
# 			MPI_HGeometry.h\
# 			MPI_HGeometry.templates.h\
# 			MPI_LoadBalance.h\
# 			MPI_MemoryReclaimer.h\
# 			MPI_Migration.h\
# 			MPI_PeriodHandler.h\
# 			MPI_SyncDOF.h\
# 			MPI_SyncProp.h\
# 			MPI_UGeometry_archive.h\
# 			MPI_ULoadBalance.h



